tests/snapshots/run_wpt_conformance__onnx_pow_float32_5D_and_broadcastable_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float32 5D and broadcastable 4D",
    "onnx",
    "PASS",
)
